# python-project-52

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: django.yml  test_cov.yml
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/mark/: apps.py  forms.py  views.py
task_manager/mark/migrations/: 0001_initial.py
task_manager/status/: forms.py  views.py
task_manager/status/migrations/: 0001_initial.py
task_manager/task/: filter.py  forms.py  models.py  urls.py  views.py
task_manager/task/migrations/: 0001_initial.py
task_manager/templates/: base.html  delete.html  home.html  index.html  login.html  nav.html  register.html
task_manager/templates/mark/: create.html  delete.html  list.html
task_manager/templates/status/: create.html  list.html
task_manager/templates/tasks/: list.html  (+3 more)
task_manager/users/: forms.py  mixins.py  models.py  views.py
tests/: __init__.py
tests/fixtures/: data.json  db_mark.json  db_mark_with_bond.json  db_status.json  db_task.json  db_task_two_users.json  user2.json
tests/marks_tests/: test_create.py  test_delete.py  test_delete_with_task.py  test_list.py  test_update.py
tests/status_tests/: test_create.py  test_delete.py  test_delete_with_task.py  test_list.py  test_update.py
tests/statuses_tests/: test_create.py  test_delete.py  test_delete_with_task.py  test_update.py
tests/tasks_tests/: test_DetailView.py  test_create.py  test_delete.py  test_list.py  test_update.py
tests/users_tests/: test_create.py  test_delete.py  test_delete_with_tasks.py  test_update.py
(+8 files in other folders)
