[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["boytsovau <alexbonch@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
python-dotenv = "^1.0.1"
dj-database-url = "^2.1.0"
django-bootstrap5 = "^23.4"
gunicorn = "^21.2.0"
sqlparse = "^0.4.4"
psycopg2-binary = "^2.9.9"
coverage = "^7.4.1"
django-filter = "^23.5"
rollbar = "^0.16.3"
django-extensions = "^3.2.3"



[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
